fix: adjust text alignment and font size for mission and vision sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,11 @@ body {
     margin: 80px;
 }
 
+.mission p{
+    text-align: left;
+    font-size: larger;
+}
+
 .mission img{
     margin-left: 60px;
     width: 500px;
@@ -283,6 +288,11 @@ body {
     text-align: right;
 }
 
+.vision p{
+    text-align: right;
+    font-size: larger;
+}
+
 /* Footer Styling*/
 footer {
     background-color: #841c1c;
@@ -299,8 +309,13 @@ footer a {
     margin-right: 100px;
 }
 
+footer a:hover {
+    color: #c69c2b;
+}
+
 footer p {
     margin-left: 80px;
+    text-align: left;
 }
 
 .footer-left img {
